    Globber (cmccabe)

    HADOOP-10249. LdapGroupsMapping should trim ldap password read from file.
    (Dilli Armugam via suresh)

    HADOOP-10346. Deadlock while logging tokens (jlowe)

    HADOOP-10328. loadGenerator exit code is not reliable.
    (Haohui Mai via cnauroth)

    HADOOP-10355. Fix TestLoadGenerator#testLoadGenerator. (Haohui Mai via jing9)

Release 2.3.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES 

Release 2.3.0 - 2014-02-18

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-8545. Filesystem Implementation for OpenStack Swift
    (Dmitry Mezhensky, David Dobbins, Stevel via stevel)

  IMPROVEMENTS

    HADOOP-10046. Print a log message when SSL is enabled.
    (David S. Wang via wang)

    HADOOP-10079. log a warning message if group resolution takes too long.
    (cmccabe)

    HADOOP-9623. Update jets3t dependency to 0.9.0 (Amandeep Khurana via Colin
    Patrick McCabe)

    HADOOP-10132. RPC#stopProxy() should log the class of proxy when IllegalArgumentException 
    is encountered (Ted yu via umamahesh)

    HADOOP-10248. Property name should be included in the exception where property value 
    is null (Akira AJISAKA via umamahesh)

    HADOOP-10086. User document for authentication in secure cluster.
    (Masatake Iwasaki via Arpit Agarwal)

    HADOOP-10274 Lower the logging level from ERROR to WARN for UGI.doAs method
    (Takeshi Miao via stack)

    HADOOP-9784. Add a builder for HttpServer. (Junping Du via llu)

    HADOOP 9871. Fix intermittent findbugs warnings in DefaultMetricsSystem.
    (Junping Du via llu)

    HADOOP-9319. Update bundled LZ4 source to r99. (Binglin Chang via llu)

    HADOOP-9432 Add support for markdown .md files in site documentation (stevel)

    HADOOP-9241. DU refresh interval is not configurable (harsh)

    HADOOP-9417.  Support for symlink resolution in LocalFileSystem /
    RawLocalFileSystem.  (Andrew Wang via Colin Patrick McCabe)
